--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ crc-catalog = "2.1.0"
 axum = "0.5.7"
 tokio = { version = "1.0", features = ["full"] }
 serde_json = "1.0.81"
+reqwest = { version = "0.11.11", features = ["json"] }
+serde = { version = "1.0", features = ["derive"] }
